<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mappy</string>

    <!-- Fragments and activity -->
    <string name="help">Help</string>
    <string name="helper">How can we help you?</string>
    <string name="new_place">New Place</string>
    <string name="new_place_label">Insert new place name</string>
    <string name="no_call">Unable to find any phone number</string>
    <string name="unauthorized_call">Permission denied to call</string>
    <string name="home_sweet">Home sweet home</string>
    <string name="no_position">Unable to reach your position</string>
    <string name="help_hint">Call the police station near you!</string>
    <!-- Search fragment cathegories -->
    <string name="food">Food</string>
    <string name="help_label">Help</string>
    <string name="tourist">Tourist</string>
    <string name="services">Services</string>
    <!-- Search fragment button labels -->
    <string name="pharmacy">PHARMACY</string>
    <string name="hospital">HOSPITAL</string>
    <string name="police">POLICE</string>
    <string name="taxi">TAXI</string>
    <string name="bakery">BAKERY</string>
    <string name="bar">BAR</string>
    <string name="cafe">CAFE</string>
    <string name="restaurant">RESTAURANT</string>
    <string name="meal_delivery">MEAL DELIVERY</string>
    <string name="supermarket">SUPERMARKET</string>
    <string name="aquarium">AQUARIUM</string>
    <string name="art_gallery">ART GALLERY</string>
    <string name="museum">MUSEUM</string>
    <string name="night_club">NIGHT CLUB</string>
    <string name="park">PARK</string>
    <string name="spa">SPA</string>
    <string name="tourist_attraction">ATTRACTION</string>
    <string name="zoo">ZOO</string>
    <string name="airport">AIRPORT</string>
    <string name="atm">ATM</string>
    <string name="bus">BUS</string>
    <string name="car_rental">CAR RENTAL</string>
    <string name="gas_station">GAS STATION</string>
    <string name="parking">PARKING</string>
    <string name="cinema">CINEMA</string>


    <!-- Tabs for main activity -->
    <string name="title_utils">Utils</string>
    <string name="title_saved">Saved</string>
    <string name="title_search">Search</string>
    <string name="title_activity_maps">Map</string>

    <!-- Radius selector -->
    <string name="initial">1 km</string>
    <string name="measure_unit">km</string>

    <!-- Snack bar -->
    <string name="no_gps">Your GPS sensor is turned off.\nWould you like to switch it on now?</string>
    <string name="no_internet">Your device is not connected.\nConnect now?</string>
    <string name="yes">YES</string>
    <string name="home_delete">Home coordinates deleted.</string>
    <string name="undo">UNDO</string>
    <string name="place_delete">Place deleted.</string>
    <string name="set_home_info">Hold the map to set a new home!</string>
    <string name="want_button">I WANT THIS HOME</string>


    <!-- DIALOGS -->
    <!-- Radius dialog -->
    <string name="radius_title">Update Radius</string>
    <string name="radius_ok_button">OK</string>
    <string name="no">NO</string>

    <string name="radius_cancel_button">Cancel</string>
    <string name="dialog_text">It seems there is no place like that nearby you. Would you like to update the research radius?</string>
    <!-- Basic dialogs -->
    <string name="to_clarify">To clarify</string>
    <string name="rationale">
    Our app requires access to the GPS sensor as, in order to identify the places nearby you,
        it requires high accuracy in localization. In no case we will monitor your daily movements
        for commercial or espionage purposes. Our prerogative is to provide you a clear, efficient
        and transparent service; for this reason we would like to clarify that your position will be
        securely stored only on your device. We wish you a fruitful use and thank you for choosing us.
    </string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="sorry">Sorry</string>
    <string name="sorry_message">It seems there have been too many requests on our service, try later in a bit.</string>
    <string name="oh_no">Oh no</string>
    <string name="unknown_err">Billing account is required.</string>
    <string name="no_conn">What did you expect, we need an Internet provider to search places nearby you. Activate now?</string>
    <string name="retry">RETRY</string>
    <string name="save_place">Do you want to save </string>

    <!-- Toasts -->
    <string name="no_gps_permission">Well, no GPS means nothing to display</string>
    <string name="thank_you">Thank you!</string>
    <string name="sorry_no_phone">Sorry but this is not a phone</string>
    <string name="saved">Saved!</string>

    <!-- Descriptions -->
    <string name="wheel_descr">fortune spinning wheel on pressed</string>
    <string name="indicator_description">spinning wheel indicator</string>
    <string name="text_for_save">LONG PRESS A PLACE TO SAVE IT!</string>
    <string name="default_string">Saved Place Without a Name</string>

    <!-- Hints -->
    <string name="hint">place name</string>
</resources>
