<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/full_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">
    <LinearLayout style="@style/CardStyle">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout style="@style/BoxStyle">
                <GridLayout style="@style/Grid"
                    android:rowCount="3"
                    android:columnCount="3">
                    <LinearLayout  style="@style/BannerStyle"
                        android:layout_row="0"
                        android:layout_column="0">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/bakery"
                            android:src="@drawable/backery"/>
                        <TextView
                            android:text="@string/bakery"
                            style="@style/Label"
                            />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="0"
                        android:layout_column="2">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/bar"
                            android:src="@drawable/bar"/>
                        <TextView
                            android:text="@string/bar"
                            style="@style/Label"
                            />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="1"
                        android:layout_column="0">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/cafe"
                            android:src="@drawable/cafe"/>
                        <TextView
                            android:text="@string/cafe"
                            style="@style/Label"
                            />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="1"
                        android:layout_column="2">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/meal_delivery"
                            android:src="@drawable/meal_delivery"/>
                        <TextView
                            android:text="@string/meal_delivery"
                            style="@style/Label"
                            />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="2"
                        android:layout_column="0">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/restaurant"
                            android:src="@drawable/restaurant"/>
                        <TextView
                            android:text="@string/restaurant"
                            style="@style/Label"
                            />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="2"
                        android:layout_column="2">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/supermarket"
                            android:src="@drawable/supermarket"/>
                        <TextView
                            android:text="@string/supermarket"
                            style="@style/Label"
                            />
                    </LinearLayout>
                </GridLayout>
            </LinearLayout>
            <TextView style="@style/LabelSearch"
                android:text="@string/food"/>
        </RelativeLayout>        <!-- Card for tourist places -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding">
            <LinearLayout style="@style/BoxStyle">
                <GridLayout style="@style/Grid"
                    android:rowCount="5"
                    android:columnCount="3">
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="0"
                        android:layout_column="0">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/aquarium"
                            android:src="@drawable/aquarium" />
                        <TextView
                            style="@style/Label"
                            android:text="@string/aquarium" />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="0"
                        android:layout_column="2">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/art_gallery"
                            android:src="@drawable/art_gallery" />
                        <TextView
                            style="@style/Label"
                            android:text="@string/art_gallery" />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="1"
                        android:layout_column="0">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/movie_theater"
                            android:src="@drawable/movie" />
                        <TextView
                            style="@style/Label"
                            android:text="@string/cinema" />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="1"
                        android:layout_column="2">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/museum"
                            android:src="@drawable/museum" />
                        <TextView
                            style="@style/Label"
                            android:text="@string/museum" />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="2"
                        android:layout_column="0">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/night_club"
                            android:src="@drawable/night_club" />
                        <TextView
                            style="@style/Label"
                            android:text="@string/night_club" />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="2"
                        android:layout_column="2">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/park"
                            android:src="@drawable/park" />
                        <TextView
                            style="@style/Label"
                            android:text="@string/park" />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="3"
                        android:layout_column="0">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/spa"
                            android:src="@drawable/spa" />
                        <TextView
                            style="@style/Label"
                            android:text="@string/spa" />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="3"
                        android:layout_column="2">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/local_attractions"
                            android:src="@drawable/tourist_attraction" />
                        <TextView
                            style="@style/Label"
                            android:text="@string/tourist_attraction" />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="4"
                        android:layout_column="0">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/zoo"
                            android:src="@drawable/zoo" />
                        <TextView
                            style="@style/Label"
                            android:text="@string/zoo" />
                    </LinearLayout>
                </GridLayout>
            </LinearLayout>
            <TextView style="@style/LabelSearch"
                android:text="@string/tourist"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding">
            <LinearLayout style="@style/BoxStyle">
                <GridLayout style="@style/Grid"
                    android:rowCount="3"
                    android:columnCount="3">
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="0"
                        android:layout_column="0">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/pharmacy"
                            android:src="@drawable/pharmacy"/>
                        <TextView
                            android:text="@string/pharmacy"
                            style="@style/Label"
                            />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="0"
                        android:layout_column="2">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/hospital"
                            android:src="@drawable/hospital"/>
                        <TextView
                            android:text="@string/hospital"
                            style="@style/Label"
                            />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="1"
                        android:layout_column="0">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/police"
                            android:src="@drawable/police"/>
                        <TextView
                            android:text="@string/police"
                            style="@style/Label"
                            />
                    </LinearLayout>
                    <LinearLayout style="@style/BannerStyle"
                        android:layout_row="1"
                        android:layout_column="2">
                        <androidx.appcompat.widget.AppCompatImageButton
                            style="@style/WrapperStyle"
                            app:backgroundTint="@color/colorPrimaryLight"
                            android:id="@+id/taxi"
                            android:src="@drawable/taxi"/>
                        <TextView
                            android:text="@string/taxi"
                            style="@style/Label"
                            />
                    </LinearLayout>
                </GridLayout>
            </LinearLayout>
            <TextView style="@style/LabelSearch"
                android:text="@string/help_label"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>