<?xml version="1.0" encoding="utf-8"?>
<!-- Card for food places -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout style="@style/BoxStyle">
        <GridLayout style="@style/Grid"
            android:rowCount="3"
            android:columnCount="3">
            <LinearLayout  style="@style/BannerStyle"
                android:layout_row="0"
                android:layout_column="0">
                <androidx.appcompat.widget.AppCompatImageButton
                    style="@style/WrapperStyle"
                    app:backgroundTint="@color/colorPrimaryLight"
                    android:id="@+id/bakery"
                    android:src="@drawable/backery"/>
                <TextView
                    android:text="@string/bakery"
                    style="@style/Label"
                    />
            </LinearLayout>
            <LinearLayout style="@style/BannerStyle"
                android:layout_row="0"
                android:layout_column="2">
                <androidx.appcompat.widget.AppCompatImageButton
                    style="@style/WrapperStyle"
                    app:backgroundTint="@color/colorPrimaryLight"
                    android:id="@+id/bar"
                    android:src="@drawable/bar"/>
                <TextView
                    android:text="@string/bar"
                    style="@style/Label"
                    />
            </LinearLayout>
            <LinearLayout style="@style/BannerStyle"
                android:layout_row="1"
                android:layout_column="0">
                <androidx.appcompat.widget.AppCompatImageButton
                    style="@style/WrapperStyle"
                    app:backgroundTint="@color/colorPrimaryLight"
                    android:id="@+id/cafe"
                    android:src="@drawable/cafe"/>
                <TextView
                    android:text="@string/cafe"
                    style="@style/Label"
                    />
            </LinearLayout>
            <LinearLayout style="@style/BannerStyle"
                android:layout_row="1"
                android:layout_column="2">
                <androidx.appcompat.widget.AppCompatImageButton
                    style="@style/WrapperStyle"
                    app:backgroundTint="@color/colorPrimaryLight"
                    android:id="@+id/meal_delivery"
                    android:src="@drawable/meal_delivery"/>
                <TextView
                    android:text="@string/meal_delivery"
                    style="@style/Label"
                    />
            </LinearLayout>
            <LinearLayout style="@style/BannerStyle"
                android:layout_row="2"
                android:layout_column="0">
                <androidx.appcompat.widget.AppCompatImageButton
                    style="@style/WrapperStyle"
                    app:backgroundTint="@color/colorPrimaryLight"
                    android:id="@+id/restaurant"
                    android:src="@drawable/restaurant"/>
                <TextView
                    android:text="@string/restaurant"
                    style="@style/Label"
                    />
            </LinearLayout>
            <LinearLayout style="@style/BannerStyle"
                android:layout_row="2"
                android:layout_column="2">
                <androidx.appcompat.widget.AppCompatImageButton
                    style="@style/WrapperStyle"
                    app:backgroundTint="@color/colorPrimaryLight"
                    android:id="@+id/supermarket"
                    android:src="@drawable/supermarket"/>
                <TextView
                    android:text="@string/supermarket"
                    style="@style/Label"
                    />
            </LinearLayout>
        </GridLayout>
    </LinearLayout>
    <TextView style="@style/LabelSearch"
        android:text="@string/food"/>
</RelativeLayout>